fix production cors for vercel and preflight